--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = mapbox_mapas
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.mapboxMapas
+PRODUCT_BUNDLE_IDENTIFIER = com.andresbadillo.mapboxMapas
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 com.andresbadillo. All rights reserved.
