--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -93,7 +93,7 @@ BEGIN
             VALUE "FileDescription", "mapbox_mapas" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "mapbox_mapas" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2022 com.andresbadillo. All rights reserved." "\0"
             VALUE "OriginalFilename", "mapbox_mapas.exe" "\0"
             VALUE "ProductName", "mapbox_mapas" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
